Programmers_코딩테스트 입문-lv0_외계어 사전 : solved